2009-08-30  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* beacon.c -> netbeacon.c, Makefile.in, aprsis.c, aprx.c, aprx.h:
	    Change file name, and all references therein.
	    A preparation for separate RF beacons.

	* netbeacon.c:
	    Add "netbeacon dest APRS,NOGATE ..."  option for configuration.

	* netbeacon.c:
	    Use float math to determine next event times for all beacons
	    for smoother distribution.

2009-08-29  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* Makefile.in, dupecheck.c, dupecheck.h, aprx.c, aprx.h, aprsis.c:
	    Add infrastructure for future:  dupecheck()

	* telemetry.c:
	    Add "NOGATE" on telemetry messages transmitted to APRSIS.

	* igate.c:
	    Deeper look into Rx-IGate specs revealed couple missing details.
	    More bits towards Tx-IGate.

2009-08-23  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* VERSION, INSTALL:
	    Mark version as: 1.00
	
	* aprx.c:
	    Document '-L' option.

	* aprx.h, aprsis.c, beacon.c, igate.c:
	    New internal API to pass data from  aprx proper, and APRS-IS
	    communicator.  This is able to carry binary (including NUL
	    bytes) data both on received AX.25 address, and frame content.

	* telemetry.c:
	    Change a bit on information texts, and transmit frequency.

	* aprx.conf.in, aprx.8.in:
	    Edit prototype configurations, and documentation

	* aprx.c, aprx.h, igate.c, cellmalloc.h, historydb.h, historydb.c,
	  keyhash.h, keyhash.c, pbuf.h, parse_aprs.c:
	    Preparing infrastructure for TX capable i-gate, and digipeater.

2009-02-10  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* Makefile.in, aprsdigi.c, igate.c, aprx.h, ax25.c, ttyreader.c,
	  netax25.c, aprsis.c:
	    Move rx-igate code to igate.c,and make initial moves to
	    collect information about what to do for tx-igate.

	* PROTOCOLS, TODO, README:
	    Document updates.

2008-12-07  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* aprx.c, aprsis.c, netax25.c, configure.in, ttyreader.c, Makefile.in: