@@ -369,8 +369,8 @@ erlangfile @VARRUN@/aprx.state
 #  b) 'for nnn-n dest "string" raw "string"'
 # The a) form flags on some of possible syntax errors in parameters.
 # It will also create only "!" type messages.  The dest parameter
-# defaults to "APRS", but can be used to add VIA keywords, like when
-# one wants to prevent gating back to RF: "APRS,NOGATE"
+# defaults to "APRS", but can be used to give other destinations.
+# The via parameter can be used to add other keywords, like "NOGATE".
 #
 # Symbol  R&   is for "rx\-only iGate"
 #
@@ -480,6 +480,17 @@ The
 "for" parameter tells callsign which is claimed as this particular beacon source.
 It must be valid AX.25 callsign in text format.
 When this "for" parameter is not given, value of "mycall" configuration entry is used.
+
+.IP dest 8
+The
+.I optional
+"dest" parameter defaults to "APRS", but can be used to define another value.
+
+.IP via 8
+The
+.I optional
+"via" parameter defaults to nothing, but can be used to define additional
+"VIA" path tokens, for example: "NOGATE".
 
 .IP symbol 8
 The "symbol" parameter is two character code, which for Rx-only iGate is pair: "R&"
